[package]
name = "raft_example"
version = "0.1.0"
authors = ["kalomidin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf", "grpcio/protobuf-codec"]
prost-codec = ["prost", "bytes", "grpcio/prost-codec"]

[dependencies]
log = "0.4"
grpcio = { version = "0.5.0-alpha.3", default-features = false, features = ["secure"] }
futures = "^0.1.15"
protobuf = { version = "2.0", optional = true }
prost = { version = "0.5", optional = true }
bytes = { version = "0.4.11", optional = true }

[[bin]]
name = "helloworld_server"
path = "src/bin/helloworld/server.rs"

[[bin]]
name = "helloworld_client"
path = "src/bin/helloworld/client.rs"